// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`favourites renders 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text />
</View>
`;

exports[`favourites renders, given a pokemon name 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    mew
  </Text>
</View>
`;
